--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@prisma/client": "^5.10.2",
     "next": "14.1.1",
+    "next-auth": "^4.24.6",
     "prisma": "^5.10.2",
     "react": "^18",
     "react-dom": "^18"
