--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@prisma/client": "^5.10.2",
+    "@types/bcrypt": "^5.0.2",
     "next": "14.1.1",
     "next-auth": "^4.24.6",
     "prisma": "^5.10.2",
