--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@nextui-org/react": "^2.2.9",
     "@prisma/client": "^5.10.2",
     "@types/bcrypt": "^5.0.2",
+    "framer-motion": "^11.0.8",
     "next": "14.1.1",
     "next-auth": "^4.24.6",
     "prisma": "^5.10.2",
