--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "next-auth": "^4.24.6",
     "prisma": "^5.10.2",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-hook-form": "^7.51.0",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@types/node": "^20",
