--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.51.0",
+    "validator": "^13.11.0",
     "zod": "^3.22.4"
   },
   "devDependencies": {
