--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@nextui-org/react": "^2.2.9",
     "@prisma/client": "^5.10.2",
     "@types/bcrypt": "^5.0.2",
+    "@types/validator": "^13.11.9",
     "framer-motion": "^11.0.8",
     "next": "14.1.1",
     "next-auth": "^4.24.6",
