--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.51.0",
+    "react-toastify": "^10.0.4",
     "validator": "^13.11.0",
     "zod": "^3.22.4"
   },
