--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "check-password-strength": "^2.0.8",
     "clsx-tailwind-merge": "^1.0.4",
     "framer-motion": "^11.0.8",
-    "next": "14.1.1",
+    "next": "^14.1.2",
     "next-auth": "^4.24.6",
     "prisma": "^5.10.2",
     "react": "^18",
