--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@nextui-org/react": "^2.2.9",
     "@prisma/client": "^5.10.2",
     "@types/validator": "^13.11.9",
+    "bcrypt": "^5.1.1",
     "check-password-strength": "^2.0.8",
     "clsx-tailwind-merge": "^1.0.4",
     "framer-motion": "^11.0.8",
