--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "framer-motion": "^11.0.8",
     "next": "^14.1.3",
     "next-auth": "^4.24.6",
+    "nodemailer": "^6.9.12",
     "prisma": "^5.10.2",
     "react": "^18",
     "react-dom": "^18",
