--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "check-password-strength": "^2.0.8",
     "clsx-tailwind-merge": "^1.0.4",
     "framer-motion": "^11.0.8",
+    "handlebars": "^4.7.8",
     "next": "^14.1.3",
     "next-auth": "^4.24.6",
     "nodemailer": "^6.9.12",
